[gd_scene load_steps=4 format=3 uid="uid://dyl40b33jys7t"]

[ext_resource type="Script" uid="uid://d2o4oc4wmd0ck" path="res://UI/PrestigeItemUI/prestige_item_ui.gd" id="1_7qe0h"]
[ext_resource type="Texture2D" uid="uid://sru08tfyi5xa" path="res://UI/PrestigeItemUI/prestige_icons.png" id="1_xfcho"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7qe0h"]
resource_local_to_scene = true
atlas = ExtResource("1_xfcho")
region = Rect2(0, 0, 16, 16)

[node name="PrestigeItemUi" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -53.0
offset_right = 35.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_7qe0h")
up = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Steel Pickaxe"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
texture = SubResource("AtlasTexture_7qe0h")
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="LabelLevel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "0/5"

[node name="LabelCost" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Emeralds: 250"

[node name="LabelDescription" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24

[node name="ButtonUpgrade" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
text = "Upgrade"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonUpgrade" to="." method="_on_button_upgrade_pressed"]
